--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -1,23 +1,7 @@
-<!-- Bootstrap core JavaScript
+<!-- Footer
 ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="{{ page.base_url }}assets/js/jquery.js"></script>
-<script src="{{ page.base_url }}dist/js/bootstrap.js"></script>
-
-<script src="http://platform.twitter.com/widgets.js"></script>
-<script src="{{ page.base_url }}assets/js/holder.js"></script>
-
-<script src="{{ page.base_url }}assets/js/application.js"></script>
-
-<!-- Analytics Piwik (Change URI)
-================================================== -->
-<script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://fuenfzueins.vorwaerts-werbung.de/piwik/" : "http://fuenfzueins.vorwaerts-werbung.de/piwik/");
-document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try {
-var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 3);
-piwikTracker.trackPageView();
-piwikTracker.enableLinkTracking();
-} catch( err ) {}
-</script><noscript><p><img src="http://fuenfzueins.vorwaerts-werbung.de/piwik/piwik.php?idsite=3" style="border:0" alt="" /></p></noscript>
+<footer class="app-footer" id="app-footer" role="contentinfo">
+    <div class="app-footer-coontent">
+        <p>Copyright &copy; 2013 ACME Inc.</p>
+    </div>
+</footer>
