--- a/app/templates/includes/head.html
+++ b/app/templates/includes/head.html
@@ -17,8 +17,8 @@
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
-  <script src="{{ page.base_url }}assets/js/html5shiv.js"></script>
-  <script src="{{ page.base_url }}assets/js/respond.min.js"></script>
+  <script src="{{ site.url }}bower_components/html5shiv/html5shiv.js"></script>
+  <script src="{{ page.base_url }}bower_components/respond/respond.min.js"></script>
 <![endif]-->
 
 <!-- Favicons -->
