--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -1,7 +1,6 @@
 <!-- Footer
 ================================================== -->
 <footer class="app-footer" id="app-footer" role="contentinfo">
-    <div class="app-footer-coontent">
-        <p>Copyright &copy; 2013 ACME Inc.</p>
-    </div>
+    <p>Designed and built by <a href="http://ade25.de" target="_blank">ade25</a>.</p>
+    <p>Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
 </footer>
