--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <a class="sr-only" href="#content">Skip navigation</a>
-
+    {% include toolbar.html %}
     <!-- Docs master nav -->
     {% include navbar.html %}
 
@@ -28,20 +28,9 @@
       </div>
 
     </div>
-
-    <!-- Footer
-    ================================================== -->
-    <footer class="bs-footer" role="contentinfo">
-      <div class="container">
-        {% include social-buttons.html %}
-
-        <p>Designed and built by <a href="http://ade25.de" target="_blank">ade25</a>.</p>
-        <p>Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-      </div>
-    </footer>
-
-    <!-- JS and analytics only. -->
     {% include footer.html %}
+    <!-- JS and analytics only. -->
+    {% include javascript.html %}
 
   </body>
 </html>
