--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default app-navbar" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".app-navbar-collapse">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -13,8 +13,8 @@
   <p class="navbar-text pull-right">Signed in as <a href="#" class="navbar-link">John Doe</a></p>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav">
+  <div class="collapse navbar-collapse app-navbar-collapse">
+    <ul class="nav navbar-nav" id="app-navbar-nav">
       <li class="active"><a href="#">Link</a></li>
       <li><a href="#">Link</a></li>
       <li class="dropdown">
