--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,19 +5,19 @@ slug: getting-started
 lead: "An overview of the new diazo theme"
 base_url: "../"
 ---
-<body>
-  <a href="#content" class="sr-only">Skip to content</a>
-  <div class="container">
+<main class="app-content-body">
+  <div class="container app-page" id="content">
     <div class="jumbotron">
       <h1>Boilerplate theme template
         <small>Kickstart your development</small>
       </h1>
     </div>
-    <section id="content">
+    <div class="app-page-header">
+        <div class="page-header">
+            <h1>Yo - this is your new theme</h1>
+        </div>
         <p class="lead">This template was generated for you by our Yeoman
             Diazo theme package.</p>
-    </section>
+    </div>
   </div>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
+</main>
