Refactor further to include new templates for kickstarts

--- a/app/templates/less/application.less
+++ b/app/templates/less/application.less
@@ -2,3 +2,10 @@
 // Application stylesheet
 // -----------------------------------------------
 
+.app-toolbar + .app-navbar {
+    margin-top: @navbar-height;
+}
+
+.app-header {
+    .jumbotron();
+}
