--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -10,10 +10,10 @@
   <body>
     <a class="sr-only" href="#content">Skip navigation</a>
     {% include toolbar.html %}
-    <!-- Docs master nav -->
+    <!-- App master nav -->
     {% include navbar.html %}
+    {% include brandbar.html %}
 
-    <!-- Docs page layout -->
     <div class="app-header">
       <div class="container">
         <h1>{{ page.title }}</h1>
@@ -30,6 +30,9 @@
     {% include footer.html %}
     <!-- JS and analytics only. -->
     {% include javascript.html %}
+    <div class="app-js-slot">
+        {% include webfonts.html %}
+    </div>
 
   </body>
 </html>
