--- a/app/templates/less/styles.less
+++ b/app/templates/less/styles.less
@@ -14,4 +14,6 @@
 // Application specific
 @import "settings.less";
 @import "signin.less";
+@import "brandbar.less";
+@import "footer.less";
 @import "application.less";
