Update diazo generator to latest best practice

--- a/app/templates/less/settings.less
+++ b/app/templates/less/settings.less
@@ -15,8 +15,8 @@
 @link-color:                    @app-danger;
 @brand-primary:                 @app-danger;
 
-@font-family-base:        'Open Sans', @font-family-sans-serif;
+@font-size-base:                16px;
+@font-family-base:              'Open Sans', @font-family-sans-serif;
 
 // Font awesome font path
-
-@fa-font-path:    "../../assets/fonts";
+@fa-font-path:                  "../../assets/fonts";
