--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default app-navbar" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
+<div class="container-fluid">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".app-navbar-collapse">
       <span class="sr-only">Toggle navigation</span>
@@ -12,7 +12,6 @@
 
   <p class="navbar-text pull-right">Signed in as <a href="#" class="navbar-link">John Doe</a></p>
 
-  <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse app-navbar-collapse">
     <ul class="nav navbar-nav" id="app-navbar-nav">
       <li class="active"><a href="#">Link</a></li>
@@ -47,4 +46,5 @@
       </li>
     </ul>
   </div><!-- /.navbar-collapse -->
+</div>
 </nav>
