--- a/app/templates/less/signin.less
+++ b/app/templates/less/signin.less
@@ -4,7 +4,7 @@
 
 .app-simple {
     margin-top: @navbar-height;
-    border-top: (@line-height-computed / 2) solid @brand-primary;
+    border-top: ceil((@line-height-computed / 2)) solid @brand-primary;
 }
 
 .app-signin {
@@ -20,7 +20,7 @@
 
 .page-aside {
     position:relative;
-    padding: (@line-height-computed * 2) @line-height-computed;
+    padding: ceil((@line-height-computed * 2)) @line-height-computed;
 }
 
 .page-signin {
