--- a/app/templates/less/styles.less
+++ b/app/templates/less/styles.less
@@ -11,6 +11,9 @@
 // Plone Compatibility
 @import "../bower_components/diazo-plone/less/plone.less";
 
+// Animate.css enable when needed
+// @import (less) "../bower_components/animate.css/animate.css";
+
 // Application specific
 @import "settings.less";
 @import "signin.less";
