--- a/app/templates/rules.xml
+++ b/app/templates/rules.xml
@@ -10,16 +10,16 @@
     <!--<theme href="minimal.html" if-path="@@edit-tile" />-->
 
      <!-- Setup custom login form -->
-    <theme href="signin.html" css:if-content="body.template-login_form" />
-    <theme href="signin.html" css:if-content="body.template-logged_out" />
-    <theme href="signin.html" css:if-content="body.template-login_failed" />
-    <theme href="signin.html" css:if-content="body.template-mail_password_form" />
+    <theme href="dist/signin.html" css:if-content="body.template-login_form" />
+    <theme href="dist/signin.html" css:if-content="body.template-logged_out" />
+    <theme href="dist/signin.html" css:if-content="body.template-login_failed" />
+    <theme href="dist/signin.html" css:if-content="body.template-mail_password_form" />
     
     <!-- Rules applying to a standard Plone web page -->
     <rules css:if-content="#visual-portal-wrapper">
 
         <notheme if="$ajax_load" />          
-        <theme href="theme.html" />
+        <theme href="dist/theme.html" />
 
         <replace css:theme="title" css:content="title" />
         <replace css:theme="base" css:content="base" />
@@ -34,7 +34,7 @@
             />
 
         <drop theme="/html/head/style" />
-        <drop theme="/html/head/script" />
+        <!-- <drop theme="/html/head/script" /> -->
         <drop theme="/html/head/link" />
 
         <!-- Drop scripts from theme footer if present -->
@@ -52,17 +52,18 @@
         <copy attributes="id dir" css:content="body" css:theme="body" />
 
         <!-- CMSUI Editbar replacements -->
-        <drop css:theme="#toolbar"
+        <drop css:theme="#app-toolbar"
             css:if-content="#anon-personalbar" />
         <!--<replace css:theme-children="#editbar" css:content="#edit-bar" />-->
-        <replace css:theme="#toolbar"
-            css:content="#toolbar" />
+        <replace css:theme="#app-toolbar"
+            css:content="#app-toolbar" />
 
         <replace css:theme-children="#personal-tools" 
             css:content-children="#portal-personaltools" />
 
         <!-- Logo (link target) -->
-        <copy attributes="href" css:content="#portal-logo" css:theme="a.brand" />
+        <copy attributes="href" css:content="#portal-logo" css:theme="a.navbar-brand" />
+        <copy attributes="href" css:content="#portal-logo" css:theme="a.app-brand" />
 
         <!-- Portal searchbox -->
         <!--<copy attributes="action" css:content="#portal-searchbox form"
@@ -76,15 +77,18 @@
         <replace css:content-children='#portal-breadcrumbs'
             css:theme-children='#breadcrumbs' />
 
-        <!-- Login form rules -->
+         <!-- Login form rules -->
         <replace css:content-children="#content-core"
-                css:theme-children="#page-content"
+                css:theme-children="#app-signin-content"
                 css:if-content="body.template-login_form" />
         <replace css:content-children="#content-core"
-                css:theme-children="#page-content"
+                css:theme-children="#app-signin-content"
+                css:if-content="body.template-login_failed" />
+        <replace css:content-children="#content-core"
+                css:theme-children="#app-signin-content"
                 css:if-content="body.template-logged_out" />
         <replace css:content-children="#content"
-                css:theme-children="#page-content"
+                css:theme-children="#app-signin-content"
                 css:if-content="body.template-mail_password_form" />
 
         <!-- Document Content -->
@@ -93,14 +97,9 @@
         
         <before css:content=".portalMessage" css:theme="#content" />
         <replace css:content-children="#viewlet-below-content"
-            css:theme-children="#below-main-content" />
+            css:theme-children="#app-below-main-content" />
 
-        <!-- Columns -->
-        <replace css:content-children="#portal-column-one > *"
-            css:theme-children="#app-sidebar-left" />
-        <replace css:content-children="#portal-column-two > *"
-            css:theme-children="#app-sidebar-right" />
-        <!-- example for the fixed.html template -->
+        <!-- Columns example -->
         <replace css:content-children="#portal-column-two > *"
             css:theme-children="#app-sidebar" />
 
