Enhance login form conditions

--- a/app/templates/rules.xml
+++ b/app/templates/rules.xml
@@ -14,6 +14,9 @@
     <theme href="dist/signin.html" css:if-content="body.template-logged_out" />
     <theme href="dist/signin.html" css:if-content="body.template-login_failed" />
     <theme href="dist/signin.html" css:if-content="body.template-mail_password_form" />
+    <theme href="dist/signin.html" css:if-content="body.template-mail_password_response" />
+    <theme href="dist/signin.html" css:if-content="body.template-pwreset_form" />
+    <theme href="dist/signin.html" css:if-content="body.template-pwreset_finish" />
     
     <!-- Rules applying to a standard Plone web page -->
     <rules css:if-content="#visual-portal-wrapper">
@@ -90,6 +93,16 @@
         <replace css:content-children="#content"
                 css:theme-children="#app-signin-content"
                 css:if-content="body.template-mail_password_form" />
+        <replace css:content-children="#content"
+                css:theme-children="#app-signin-content"
+                css:if-content="body.template-mail_password_response" />
+        <replace css:content-children="#content"
+                css:theme-children="#app-signin-content"
+                css:if-content="body.template-pwreset_form" />
+        <replace css:content-children="#content"
+                css:theme-children="#app-signin-content"
+                css:if-content="body.template-pwreset_finish" />
+
 
         <!-- Document Content -->
         <replace css:content-children="#content" 
