Reindent and cleanup generator

--- a/app/templates/includes/brandbar.html
+++ b/app/templates/includes/brandbar.html
@@ -1,4 +1,4 @@
-<div class="app-brandbar">
+<div class="app-brandbar" id="app-brandbar">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-lg-8">
