--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default app-navbar" role="navigation">
+<nav class="navbar navbar-default app-navbar" id="app-navbar" role="navigation">
 <div class="container-fluid">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".app-navbar-collapse">
@@ -13,7 +13,7 @@
   <p class="navbar-text pull-right">Signed in as <a href="#" class="navbar-link">John Doe</a></p>
 
   <div class="collapse navbar-collapse app-navbar-collapse">
-    <ul class="nav navbar-nav" id="app-navbar-nav">
+    <ul class="nav navbar-nav app-navbar-nav" id="app-navbar-nav">
       <li class="active"><a href="#">Link</a></li>
       <li><a href="#">Link</a></li>
       <li class="dropdown">
