--- a/app/templates/less/signin.less
+++ b/app/templates/less/signin.less
@@ -3,68 +3,78 @@
 // ---------------------------------------------------
 
 .app-layout-simple {
-    background: @gray-dark;
+  background: @gray-dark;
 }
 
 .app-signin {
-    .center-block();
-    margin-top: (@navbar-height * 2);
-    //background: @navbar-default-bg;
-    // #gradient > .vertical(@start-color: #fff; @end-color: @gray-lighter);
-    border-radius: 0;
+  margin-top: (@navbar-height * 2);
+  //background: @navbar-default-bg;
+  // #gradient > .vertical(@start-color: #fff; @end-color: @gray-lighter);
+  border-radius: 0;
 }
 
 .app-signin-header {
-    background: @gray-dark;
-    color: @gray-lighter;
+  background: @gray-dark;
+  color: @gray-lighter;
 }
 .app-signin-title {
-    font-weight: 300;
+  font-weight: 300;
 }
 
 .app-signin-content {
-    padding: @line-height-computed ceil((@line-height-computed / 2));
+  padding: @line-height-computed 0;
 }
 
 .app-signin-form {
-    
+
 }
 
 .app-signin-group {
-    padding: @line-height-computed 0;
-    background: @navbar-default-bg;
+  padding: 0;
+  background: @navbar-default-bg;
+  &.app-signin-group-text {
+    margin-top: @line-height-computed;
+    padding: ceil((@line-height-computed * 2)) 0;
+    border-top: 1px dotted @gray-light;
+  }
+  label,
+  .signin-label {
+    font-weight: 300;
+    color: @gray;
+  }
+}
+
+.app-signin-control {
+  padding: @line-height-computed 0 floor((@line-height-computed * 2));
+  &.app-signin-control-bordered {
     border-bottom: 1px dotted @gray-light;
-    label,
-    .signin-label {
-        font-weight: 300;
-        color: @gray;
-    }
+  }
 }
 
 .page-aside {
-    position:relative;
-    padding: ceil((@line-height-computed * 2)) @line-height-computed;
+  position:relative;
+  padding: ceil((@line-height-computed * 2)) @line-height-computed;
 }
 
 .page-signin {
-    color: @gray-light;
+  color: @gray-light;
 }
 
 .page-signin .documentDescription {
-    margin-bottom: @line-height-computed;
+  margin-bottom: @line-height-computed;
 }
 .page-signin p {
-    .text-muted();
+  .text-muted();
 }
 
 // registration
 .app-register {
-    margin-bottom: @navbar-height;
-    border-bottom: 5px solid @brand-success;
+  margin-bottom: @navbar-height;
+  border-bottom: 5px solid @brand-success;
 }
 
 .app-signin-actions,
 .app-register-actions {
-    padding: @line-height-computed 0;
+  padding: @line-height-computed;
 }
 
