Integrate latest enhancements
In order to performance enhance most sites we include the css/js
static versions fpr anonymous users

--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -8,7 +8,7 @@
     {% include head.html %}
   </head>
   <body>
-    <a class="sr-only" href="#content">Skip navigation</a>
+    <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
     {% include toolbar.html %}
     <!-- App master nav -->
     {% include navbar.html %}
