--- a/app/templates/rules.xml
+++ b/app/templates/rules.xml
@@ -17,32 +17,37 @@
     <theme href="dist/signin.html" css:if-content="body.template-mail_password_response" />
     <theme href="dist/signin.html" css:if-content="body.template-pwreset_form" />
     <theme href="dist/signin.html" css:if-content="body.template-pwreset_finish" />
-    
+
     <!-- Rules applying to a standard Plone web page -->
     <rules css:if-content="#visual-portal-wrapper">
 
-        <notheme if="$ajax_load" />          
+        <notheme if="$ajax_load" />
         <theme href="dist/theme.html" />
 
         <replace css:theme="title" css:content="title" />
-        <replace css:theme="base" css:content="base" />
-        
         <!-- Add meta tags -->
+        <drop theme="/html/head/meta" />
+
         <after content="/html/head/meta" theme-children="/html/head" />
-        <!-- Copy style, script and link tags in the order they appear in the content -->
-        <after
-            content="/html/head/style | /html/head/script | /html/head/link"
-            theme-children="/html/head"
-            />
 
-        <drop theme="/html/head/style" />
-        <!-- <drop theme="/html/head/script" /> -->
-        <drop theme="/html/head/link" />
+        <rules css:if-content="body.userrole-authenticated">
+            <!-- Copy style, script and link tags in the order they appear in the content -->
+            <after
+                content="/html/head/style | /html/head/script | /html/head/link"
+                theme-children="/html/head"
+                />
 
-        <!-- Drop scripts from theme footer if present -->
-        <drop theme="/html/body/script" />
+            <drop theme="/html/head/style" />
+            <drop theme="/html/head/script" />
+            <drop theme="/html/head/link" />
+
+            <!-- Drop scripts from theme footer if present -->
+            <drop theme="/html/body/script" />
+        </rules>
 
         <!-- Custom favicon implementation -->
+        <drop css:content="head link[rel='apple-touch-icon']" />
+        <drop css:content="head link[rel='shortcut icon']" />
         <!--<drop content="link[@type='image/x-icon']" />
         <after theme="/html/head">
             <link rel="shortcut icon" href="/++theme++example.jmstheme/img/favicon.ico" type="images/x-icon" />
@@ -51,16 +56,16 @@
         <!-- Copy over the id/class attributes on the body tag.
              This is important for per-section styling -->
         <merge attributes="class" css:content="body" css:theme="body" />
-        <copy attributes="id dir" css:content="body" css:theme="body" />
+        <copy attributes="*" css:content="body" css:theme="body" />
 
         <!-- CMSUI Editbar replacements -->
         <drop css:theme="#app-toolbar"
-            css:if-content="#anon-personalbar" />
-        <!--<replace css:theme-children="#editbar" css:content="#edit-bar" />-->
+            css:if-content=".userrole-anonymous" />
+
         <replace css:theme="#app-toolbar"
             css:content="#app-toolbar" />
 
-        <replace css:theme-children="#personal-tools" 
+        <replace css:theme-children="#personal-tools"
             css:content-children="#portal-personaltools" />
 
         <!-- Logo (link target) -->
@@ -104,9 +109,9 @@
 
 
         <!-- Document Content -->
-        <replace css:content-children="#content" 
+        <replace css:content-children="#content"
             css:theme-children="#content" />
-        
+
         <before css:content=".portalMessage" css:theme="#content" />
         <replace css:content-children="#viewlet-below-content"
             css:theme-children="#app-below-main-content" />
