--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <p>Designed and built by <a href="http://ade25.de" target="_blank">Ade25</a>.</p>
         <p>Code licensed under
-            <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">MIT</a>, documentation under 
+            <a href="https://github.com/ade25/<%= pkg.name %>/LICENSE">MIT</a>, documentation under
             <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
     </div>
 </footer>
