--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,17 +7,15 @@ base_url: "../"
 ---
 <main class="app-content-body">
   <div class="app-page" id="content">
-    <div class="jumbotron">
-      <h1>Boilerplate theme template
-        <small>Kickstart your development</small>
-      </h1>
-    </div>
     <div class="app-page-header">
         <div class="page-header">
             <h1>Yo - this is your new theme</h1>
         </div>
         <p class="lead">This template was generated for you by our Yeoman
             Diazo theme package.</p>
+        <div class="app-page-body">
+          <p>use this template as a starting point for further development</p>
+        </div>
     </div>
   </div>
 </main>
