--- a/app/templates/less/application.less
+++ b/app/templates/less/application.less
@@ -3,7 +3,7 @@
 // -----------------------------------------------
 
 body {
-    background: @gray-lighter;
+    background: #fff;
     &.template-theming-controlpanel .row {
         // Fix theming control panel
         margin: 0 @line-height-computed;
