--- a/app/templates/includes/head.html
+++ b/app/templates/includes/head.html
@@ -8,7 +8,7 @@
     {{ page.title }} &middot; Brandname
   {% endif %}
 </title>
-<link href="{{ page.base_url }}dist/css/<%= pkg.name %>.css.min" rel="stylesheet">
+<link href="{{ page.base_url }}dist/css/<%= _.slugify(themeName) %>.min.css" rel="stylesheet">
 <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
