--- a/app/templates/includes/javascript.html
+++ b/app/templates/includes/javascript.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 function downloadJSAtOnload() {
 var element = document.createElement("script");
-element.src = "{{ page.base_url }}dist/js/<%= pkg.name %>.js.min";
+element.src = "{{ page.base_url }}dist/js/<%= _.slugify(themeName) %>.min.js";
 document.body.appendChild(element);
 }
 if (window.addEventListener)
