Add dedicated content styles

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,14 +8,15 @@ base_url: "../"
 <main class="app-content-body">
   <div class="app-page" id="content">
     <div class="app-page-header">
-        <div class="page-header">
+        <div class="app-page-title">
             <h1>Yo - this is your new theme</h1>
         </div>
-        <p class="lead">This template was generated for you by our Yeoman
+        <p class="app-page-abstract">This template was generated for you by our Yeoman
             Diazo theme package.</p>
-        <div class="app-page-body">
-          <p>use this template as a starting point for further development</p>
-        </div>
+    </div>
+    <div class="app-page-body">
+      <p>use this template as a starting point for further development</p>
+    </div>
     </div>
   </div>
 </main>
