--- a/app/templates/less/styles.less
+++ b/app/templates/less/styles.less
@@ -16,7 +16,9 @@
 
 // Application specific
 @import "settings.less";
-@import "signin.less";
+@import "schaffolding.less";
 @import "brandbar.less";
+@import "content.less";
+@import "signin.less";
 @import "footer.less";
 @import "application.less";
