Cleanup the main files

--- a/app/templates/includes/brandbar.html
+++ b/app/templates/includes/brandbar.html
@@ -9,7 +9,7 @@
             </div>
             <div class="col-xs-12 col-sm-4">
                 <p class="h5 app-brand-claim">
-                    Brand specific claim or info
+                    App specific claim
                 </p>
             </div>
         </div>
