--- a/app/templates/less/styles.less
+++ b/app/templates/less/styles.less
@@ -16,7 +16,7 @@
 
 // Application specific
 @import "settings.less";
-@import "schaffolding.less";
+@import "scaffolding.less";
 @import "brandbar.less";
 @import "content.less";
 @import "signin.less";
