--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="app-footer" id="app-footer" role="contentinfo">
-    <div class="container">
+    <div class="app-footer-content">
         <p>Designed and built by <a href="http://ade25.de" target="_blank">Ade25</a>.</p>
         <p>Code licensed under
             <a href="https://github.com/ade25/<%= pkg.name %>/LICENSE">MIT</a>, documentation under
