--- a/app/templates/includes/brandbar.html
+++ b/app/templates/includes/brandbar.html
@@ -1,14 +1,14 @@
 <div class="app-brandbar" id="app-brandbar">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-8">
-                <a class="app-brand" href="/">
-                    <img class="img-responsive" src="{{ page.base_url }}assets/img/logo.jpg" />
-                    <span class="h3 app-brandname">App Brandname</span>
+    <div class="app-brandbar-content">
+        <div class="app-brand">
+            <div class="app-brand-title">
+                <a class="app-brandname" href="/">
+                    <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/logo.jpg" />
+                    <span class="app-brandname-heading">App Brandname</span>
                 </a>
             </div>
-            <div class="col-xs-12 col-sm-4">
-                <p class="h5 app-brand-claim">
+            <div class="app-brand-claim">
+                <p class="app-claim">
                     App specific claim
                 </p>
             </div>
