--- a/app/templates/less/content.less
+++ b/app/templates/less/content.less
@@ -10,6 +10,16 @@
   .page-header();
 }
 
-.app-page-abstract {
-  .lead();
+
+// Use custom lead element for page desciptions
+// that has proper line-height on all media types
+.app-page-lead,
+app-page-abstract {
+  margin-bottom: @line-height-computed;
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 1.5;
+  @media (min-width: @screen-sm-min) {
+    font-size: 1.5rem;
+  }
 }
