Move container element to mixin

--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -14,10 +14,8 @@
     {% include navbar.html %}
     {% include brandbar.html %}
 
-    <div class="container">
-        <div role="main">
+    <div class="app-content" role="main">
           {{ content }}
-        </div>
     </div>
 
     {% include footer.html %}
