--- a/app/templates/less/signin.less
+++ b/app/templates/less/signin.less
@@ -6,6 +6,11 @@
   background: @gray-dark;
 }
 
+.app-signin-wrapper {
+  .center-block();
+  max-width: 480px;
+}
+
 .app-signin {
   margin-top: (@navbar-height * 2);
   //background: @navbar-default-bg;
@@ -14,8 +19,7 @@
 }
 
 .app-signin-header {
-  background: @gray-dark;
-  color: @gray-lighter;
+  color: @gray-dark;
 }
 .app-signin-title {
   font-weight: 300;
@@ -31,10 +35,10 @@
 
 .app-signin-group {
   padding: 0;
-  background: @navbar-default-bg;
+  // background: @navbar-default-bg;
   &.app-signin-group-text {
     margin-top: @line-height-computed;
-    padding: ceil((@line-height-computed * 2)) 0;
+    padding: @line-height-computed 0;
     border-top: 1px dotted @gray-light;
   }
   label,
@@ -45,7 +49,7 @@
 }
 
 .app-signin-control {
-  padding: @line-height-computed 0 floor((@line-height-computed * 2));
+  padding: ceil((@line-height-computed / 2)) 0 @line-height-computed;
   &.app-signin-control-bordered {
     border-bottom: 1px dotted @gray-light;
   }
