--- a/app/templates/rules.xml
+++ b/app/templates/rules.xml
@@ -26,19 +26,20 @@
 
         <before content="/html/head/meta" theme="/html/head/title" />
 
-        <after content="/html/head/link"
-            theme-children="/html/head"
-            css:if-content="body.userrole-authenticated" />
-        <after
-            content="/html/head/script"
-            theme-children="/html/head"
-            css:if-content="body.userrole-authenticated"
-            />
-        <drop theme="/html/head/style" />
+       <rules css:if-content="body.userrole-authenticated">
+            <!-- Copy style, script and link tags in the order they appear in the content -->
+            <after
+                content="/html/head/style | /html/head/script | /html/head/link"
+                theme-children="/html/head"
+                />
 
-        <!-- Drop scripts from theme footer if present -->
-        <drop theme="/html/body/script"
-            css:if-content="body.userrole-authenticated" />
+            <drop theme="/html/head/style" />
+            <drop theme="/html/head/script" />
+            <drop theme="/html/head/link" />
+
+            <!-- Drop scripts from theme footer if present -->
+            <drop theme="/html/body/script" />
+        </rules>
 
         <!-- Custom favicon implementation -->
         <drop content="link[@type='image/x-icon']" />
