Add animation for signin form

--- a/app/templates/less/styles.less
+++ b/app/templates/less/styles.less
@@ -27,8 +27,8 @@
 @import "../bower_components/bootstrap/less/buttons.less";
 
 // Components
-// @import "../bower_components/bootstrap/less/component-animations.less";
-// @import "../bower_components/bootstrap/less/dropdowns.less";
+@import "../bower_components/bootstrap/less/component-animations.less";
+@import "../bower_components/bootstrap/less/dropdowns.less";
 @import "../bower_components/bootstrap/less/button-groups.less";
 @import "../bower_components/bootstrap/less/input-groups.less";
 @import "../bower_components/bootstrap/less/navs.less";
@@ -73,6 +73,7 @@
 // Application specific
 @import "settings.less";
 @import "scaffolding.less";
+@import "animation.less";
 @import "brandbar.less";
 @import "content.less";
 @import "signin.less";
