Add form less file for password hide

--- a/app/templates/less/styles.less
+++ b/app/templates/less/styles.less
@@ -74,6 +74,7 @@
 @import "settings.less";
 @import "scaffolding.less";
 @import "animation.less";
+@import "forms.less";
 @import "brandbar.less";
 @import "content.less";
 @import "signin.less";
