Update signin styles

--- a/app/templates/less/scaffolding.less
+++ b/app/templates/less/scaffolding.less
@@ -8,6 +8,9 @@ html {
     @media (min-width: @screen-sm-min) {
         font-size: ceil((@font-size-root + 2));
     }
+    @media (min-width: @screen-md-min) {
+        font-size: ceil((@font-size-root + 4));
+    }
 }
 
 body {
