--- a/app/templates/less/signin.less
+++ b/app/templates/less/signin.less
@@ -33,6 +33,10 @@
 
 }
 
+.app-signin-field {
+  position: relative;
+}
+
 .app-signin-group {
   padding: 0;
   // background: @navbar-default-bg;
@@ -79,7 +83,8 @@
 
 .app-signin-actions,
 .app-register-actions {
-  padding: @line-height-computed;
+  padding: 2rem 0 0;
+  text-align: center;
 }
 
 .app-signin-btn {
