--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
-    {% include toolbar.html %}
+    {% include toolbar-plone.html %}
     <!-- App master nav -->
     {% include navbar.html %}
     {% include brandbar.html %}
