Add styleguide scaffolding

--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -4,13 +4,13 @@ title: Sign in
 slug: signin
 base_url: "../../"
 ---
-<main class="app-signin-wrapper">
+<div class="app-signin-wrapper">
   <section class="app-signin page page-signin">
     <article class="page-content" id="app-signin-content">
       <header class="app-signin-header">
           <div class="app-signin-header-content">
               <h1 class="app-signin-title">
-                  Anmelden
+                  Landratsamt Aichach-Friedberg
               </h1>
           </div>
       </header>
@@ -45,4 +45,4 @@ base_url: "../../"
       </div>
     </article>
   </section>
-</main>
+</div>
