Make theme template usable again

--- a/app/templates/src/sass/layout/_navbar.scss
+++ b/app/templates/src/sass/layout/_navbar.scss
@@ -45,7 +45,7 @@
     border-color: transparent;
   }
   .icon-bar {
-    background-color: $navbar-inverse-toggle-icon-bar-bg;
+    background-color: $gray-lighter;
   }
   // Bars
   .icon-bar {
