--- a/app/templates/src/sass/components/_cards.scss
+++ b/app/templates/src/sass/components/_cards.scss
@@ -57,9 +57,11 @@
 //
 //## Add spacing to cards
 .app-card-gutter {
-  margin: -1rem 0 0 -1rem;
+  margin-left: -1rem;
+  margin-right: -1rem;
   .app-card {
-    padding: 1rem 0 0 1rem;
+      margin-left: 1rem;
+      margin-right: 1rem;
   }
 }
 
@@ -97,7 +99,7 @@
   margin: 0.5rem auto;
   padding: 1rem;
   text-align: center;
-  @media (min-width: $screen-sm-min) {
+  @@include media-breakpoint-up(sm) {
     padding: 2rem 3rem;
     width: 66.66%;
   }
@@ -105,7 +107,7 @@
 
 //** Round hellip sign
 .app-card-placeholder-sign {
-  @include square(4rem);
+  @include size(4rem);
   @extend .center-block;
   padding-top: 0.5rem;
   border-radius: 50%;
