--- a/app/templates/src/sass/components/_cards.scss
+++ b/app/templates/src/sass/components/_cards.scss
@@ -99,7 +99,7 @@
   margin: 0.5rem auto;
   padding: 1rem;
   text-align: center;
-  @@include media-breakpoint-up(sm) {
+  @include media-breakpoint-up(sm) {
     padding: 2rem 3rem;
     width: 66.66%;
   }
