--- a/app/templates/src/sass/pages/_contentpage.scss
+++ b/app/templates/src/sass/pages/_contentpage.scss
@@ -1,4 +1,6 @@
 .app-page {
+  @include make-container();
+  @include make-container-max-widths();
     padding: 1rem;
     @include media-breakpoint-up(sm) {
         margin-bottom: 1rem;
