--- a/app/templates/src/styleguide.html
+++ b/app/templates/src/styleguide.html
@@ -13,14 +13,14 @@ base_url: "../../"
           </h1>
       </div>
       <p class="app-page-abstract">
-          Relaunch Webportal Landratsamt Aichach-Friedberg
+          Webportal Doe Incorporated
       </p>
   </div>
   <div class="app-page-body">
     {% include components/brandpanel.html %}
     <hr>
     <p>Design Komponenten und Stylevorgaben für das Webportal
-      <a href="http://www.lra-aic-fdb.de">lra-aic-fdb.de</a>
+      <a href="http://doe.tld">doe.tld</a>
     </p>
   </div>
 </div>
