--- a/app/templates/includes/components/navbar.html
+++ b/app/templates/includes/components/navbar.html
@@ -1,48 +1,53 @@
 <nav class="app-navbar" id="app-navbar" role="navigation">
-<div class="container">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle app-navbar-toggle" data-toggle="collapse" data-target=".app-navbar-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="app-navbar-brand visible-xs" href="/">Bereiche</a>
-  </div>
+    <div class="app-navbar-header">
+        <div class="app-navbar-header-title">
+            <a class="app-navbar-brand" href="/">Navigation</a>
+        </div>
+        <div class="app-navbar-header-toggle">
+            <button type="button" class="app-navbar-toggle navbar-toggler hidden-md-up" data-toggle="collapse" data-target="#app-navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                &#9776;
+            </button>
+        </div>
+    </div>
 
-  <div class="collapse navbar-collapse app-navbar-collapse">
-    <ul class="xnav xnavbar-nav app-navbar-nav" id="app-navbar-nav">
-      <li class="app-navitem active">
-        <a class="app-navitem-tab app-navitem-tab-home" href="{{ page.base_url }}">
-          <span>Startseite</span>
-        </a>
-      </li>
-      <li class="app-navitem">
-        <a class="app-navitem-tab app-navitem-tab-aktuelles" href="{{ page.base_url }}section-1">
-          <span>Section 1</span>
-        </a>
-      </li>
-      <li class="app-navitem">
-        <a class="app-navitem-tab app-navitem-tab-verwaltung-und-politik" href="{{ page.base_url }}section-2">
-          <span>Section 2</span>
-        </a>
-      </li>
-      <li class="app-navitem">
-        <a class="app-navitem-tab app-navitem-tab-tourismus-und-wirtschaft" href="{{ page.base_url }}section-3">
-          <span>Section 3</span>
-        </a>
-      </li>
-      <li class="app-navitem">
-        <a class="app-navitem-tab app-navitem-tab-leben-im-landkreis" href="{{ page.base_url }}section-4">
-          <span>Section 4</span>
-        </a>
-      </li>
-      <li class="app-navitem">
-        <a class="app-navitem-tab app-navitem-tab-buergerportal-und-service" href="{{ page.base_url }}section-5">
-          <span>Section 5</span>
-        </a>
-      </li>
-    </ul>
-  </div><!-- /.navbar-collapse -->
-</div>
+    <div class="app-navbar-collapse collapse navbar-toggleable-sm" id="app-navbar-collapse">
+        <ul class="app-navbar-nav" id="app-navbar-nav">
+            <li class="app-navitem active">
+                <a class="app-navitem-tab app-navitem-tab-home" href="{{ page.base_url }}startseite">
+                    <span>Startseite</span>
+                </a>
+            </li>
+            <li class="app-navitem">
+                <a class="app-navitem-tab" href="{{ page.base_url }}section-1">
+                    <span>Section 1</span>
+                </a>
+            </li>
+            <li class="app-navitem">
+                <a class="app-navitem-tab" href="{{ page.base_url }}gesundheut">
+                    <span>Section 2</span>
+                </a>
+            </li>
+            <li class="app-navitem active">
+                <a class="app-navitem-tab" href="{{ page.base_url }}bildung">
+                    <span>Section 3</span>
+                </a>
+            </li>
+            <li class="app-navitem">
+                <a class="app-navitem-tab" href="{{ page.base_url }}pflege">
+                    <span>Section 4 - this is very long</span>
+                </a>
+            </li>
+            <li class="app-navitem">
+                <a class="app-navitem-tab" href="{{ page.base_url }}gastfreundschaft">
+                    <span>Section 5</span>
+                </a>
+            </li>
+            <li class="app-navitem">
+                <a class="app-navitem-tab" href="{{ page.base_url }}spiritualitaet">
+                    <span>Section 6</span>
+                </a>
+            </li>
+        </ul>
+    </div><!-- /.navbar-collapse -->
 </nav>
